# Fundamentals-of-algorithmization-and-programming

./: .gitignore  README.md  check_hierarchy.py
.github/workflows/: hierarchy.yml
353501/Иваненко К.С./LabWork_3/Task_3/: CMakeLists.txt  longlongval.h  mainwindow.cpp  mainwindow.h  mainwindow.ui
353501/Петухов М.Д./LabWork_2/Task_2/: CMakeLists.txt  Dish.cpp  Dish.h  a.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui  menu.txt  order.cpp  order.h  orders.txt
353501/Петухов М.Д./LabWork_3/Task_5/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
353501/Пешкур И.А./LabWork_2/Task_3/: CMakeLists.txt  Task3_4_1.cpp  binaryoperation.h  expression.cpp  number.cpp  number.h
353501/Подгайский А.А./LabWork_2/Task_1/: CMakeLists.txt  main.cpp
353501/Подгайский А.А./LabWork_2/Task_2/: CMakeLists.txt  main.cpp
353501/Подгайский А.А./LabWork_3/Task_1/: CMakeLists.txt  Converter.cpp  Converter.h  LongDoubleValidator.cpp  LongDoubleValidator.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  test.cpp
353501/Подгайский А.А./LabWork_3/Task_3/: CMakeLists.txt  LongValidator.cpp  LongValidator.h  Reverser.cpp  mainwindow.cpp  mainwindow.h
353501/Подгайский А.А./LabWork_4/Task_2/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
353501/Подгайский А.А./LabWork_5/Task_1/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
353501/Подгайский А.А./LabWork_5/Task_2/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
353501/Подгайский А.А./LabWork_5/Task_3/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
353501/Подгайский А.А./LabWork_6/Task_1/: CMakeLists.txt  Footwear.cpp  Footwear.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
353501/Подгайский А.А./LabWork_6/Task_2/: CMakeLists.txt  Footwear.cpp  Footwear.h  mainwindow.cpp  mainwindow.h  mainwindow.ui
353501/Подгайский А.А./Labwork_3/Task_5/: CMakeLists.txt  DirCounter.h
353501/Полянский М.А./LabWork_1/Task_2/: CMakeLists.txt  circle.cpp  circle.h  customScene.cpp  customScene.h  customShape.cpp  customShape.h  hexagon.cpp  hexagon.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  rectangle.cpp  rectangle.h  rhombus.cpp  rhombus.h  shape.cpp  shape.h  square.cpp  square.h  star.cpp  star.h  triangle.cpp  triangle.h
353501/Романовский М.Д./LabWork_1/Task_1/: CMakeLists.txt  Car.cpp  Car.h  MainWindow.cpp  MainWindow.h  MainWindow.ui  MovingRectangle.cpp  MovingRectangle.h  main.cpp
353501/Романовский М.Д./LabWork_2/: CMakeLists.txt
353501/Романовский М.Д./LabWork_2/Task_1/: Date.cpp  Date.h  mainwindow.cpp  mainwindow.h  mainwindow.ui
353501/Романовский М.Д./LabWork_2/Task_2/: Car.cpp  Car.h  CarDialog.cpp  CarDialog.h  Database.cpp  Database.h  Filter.h  RangeFilter.cpp  RangeFilter.h  SelectFilter.cpp  SelectFilter.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
353501/Романовский М.Д./LabWork_2/Task_3/: BinaryOperation.h  Expression.cpp  Expression.h  Number.cpp  Number.h  test.cpp
353501/Романовский М.Д./LabWork_2/Task_4/: BinaryOperation.cpp
353501/Романовский М.Д./LabWork_3/Task_1/: CMakeLists.txt  ToBin.cpp  ToBin.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
353501/Романовский М.Д./LabWork_4/: CMakeLists.txt
353501/Романовский М.Д./LabWork_4/Task_1/: Search.cpp  Search.h  Sorter.cpp  Sorter.h  mainwindow.cpp  mainwindow.h  mainwindow.ui
353501/Романовский М.Д./LabWork_4/Task_2/: Search.cpp  Search.h  VisVector.cpp
353501/Романовский М.Д./LabWork_4/Task_3/: mainwindow.ui
353501/Романовский М.Д./LabWork_4/Task_4/: Vector.h
353501/Романовский М.Д./LabWork_4/Task_5/: Pair.h  test_Vector.cpp
353501/Романовский М.Д./LabWork_5/: CMakeLists.txt
353501/Романовский М.Д./LabWork_5/Task_1/: CatchyLineEdit.cpp  CatchyLineEdit.h  Keyboard.cpp  Keyboard.h  LetterBox.cpp  LetterBox.h  PixArt.cpp  PixArt.h  mainwindow.cpp  mainwindow.h  mainwindow.ui
353501/Романовский М.Д./LabWork_5/Task_2/: String.cpp  String.h  String_errnos.cpp  String_test.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
353501/Романовский М.Д./LabWork_5/Task_3/: Bitset.h  Bitset_test.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
353501/Романовский М.Д./LabWork_6/: CMakeLists.txt
353501/Романовский М.Д./LabWork_6/Task_1/: Buisenessman.cpp  Buisenessman.h  mainwindow.cpp  mainwindow.h  mainwindow.ui
353501/Романовский М.Д./LabWork_6/Task_2/: mainwindow.cpp  mainwindow.h  mainwindow.ui
353501/Романовский М.Д./LabWork_7/: CMakeLists.txt
353501/Романовский М.Д./LabWork_7/Task_1/: Deque.h  mainwindow.cpp  mainwindow.h  mainwindow.ui
353501/Романовский М.Д./LabWork_7/Task_2/: SearchTree.h  SearchTree_test.cpp  Solver.cpp  Solver.h  mainwindow.cpp  mainwindow.h  mainwindow.ui
353501/Романовский М.Д./LabWork_7/Task_3/: HashMap.h  HashMap_test.cpp  Solver.cpp  Solver.h  mainwindow.cpp  mainwindow.h  mainwindow.ui
353501/Романовский М.Д./LabWork_7/Task_4/: HashMap.h  HashMap_test.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
353501/Романовский М.Д./LabWork_7/Task_5/: Deque_test.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
353501/Федотов В.А./LabWork_2/Task_4/: CMakeLists.txt  main.cpp
353501/Федотов В.А./LabWork_3/Task_5/: CMakeLists.txt  mainwindow.cpp  mainwindow.h
353501/Федотов В.А./LabWork_4/: CMakeLists.txt
353501/Федотов В.А./LabWork_4/Task_1/: mainwindow.cpp  mainwindow.h  mainwindow.ui  sorter.cpp  sorter.h
353501/Федотов В.А./LabWork_4/Task_2/: mainwindow.cpp  mainwindow.ui  sorter.cpp  sorter.h
353501/Федотов В.А./LabWork_4/Task_3/: mainwindow.cpp  mainwindow.h  mainwindow.ui
353501/Федотов В.А./LabWork_4/Task_4/: iterator.h  main.cpp  vector.h
353501/Федотов В.А./LabWork_4/Task_5/: mainwindow.cpp  mainwindow.h  mainwindow.ui  pair.h
353501/Федотов В.А./LabWork_5/: CMakeLists.txt
353501/Федотов В.А./LabWork_5/Task_1/: Highlighter.cpp  Highlighter.h  InputLineEdit.cpp  InputLineEdit.h  KeyObject.cpp  KeyObject.h  Keyboard.cpp  Keyboard.h  OutputTextEdit.cpp  OutputTextEdit.h  mainwindow.cpp  mainwindow.h  mainwindow.ui
353501/Федотов В.А./LabWork_5/Task_2/: mainwindow.cpp  mainwindow.h  mainwindow.ui
(+10461 files in other folders)
